[package]
name = "rusty-productivity-visualizer-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
rusty-schedule-core = { git = "https://github.com/Ripper53/RustySchedule.git" }

[dev-dependencies]
proptest = "1.4.0"
cargo-mutants = "24.4.0"
